src/stages/snapshots/lumina2__stages__parse__test__statements__expr_no_semicolon.snap
---
source: src/stages/parse.rs
expression: "1"
---
ExprStatement {
    expr: Literal(
        Integer(
            IntegerLiteral(
                IntLit(
                    1,
                ),
            ),
        ),
    ),
    tok_semicolon: None,
}
