src/stages/snapshots/lumina2__stages__parse__test__statements__return_simple.snap
---
source: src/stages/parse.rs
expression: return 1;
---
ReturnStatement {
    tok_return: Return,
    value: Literal(
        Integer(
            IntegerLiteral(
                IntLit(
                    1,
                ),
            ),
        ),
    ),
    tok_semicolon: SemiColon,
}
