src/stages/snapshots/lumina2__stages__parse__test__statements__statements_expr.snap
---
source: src/stages/parse.rs
expression: "1"
---
Expr(
    ExprStatement {
        expr: Literal(
            Integer(
                IntegerLiteral(
                    IntLit(
                        1,
                    ),
                ),
            ),
        ),
        tok_semicolon: None,
    },
)
