src/stages/snapshots/lumina2__stages__parse__test__statements__statements_let.snap
---
source: src/stages/parse.rs
expression: let a = 1;
---
Let(
    LetStatement {
        tok_let: Let,
        variable: Ident(
            "a",
        ),
        tok_eq: Eq,
        value: Literal(
            Integer(
                IntegerLiteral(
                    IntLit(
                        1,
                    ),
                ),
            ),
        ),
        tok_semicolon: SemiColon,
    },
)
