src/stages/snapshots/lumina2__stages__parse__test__statements__statements_return.snap
---
source: src/stages/parse.rs
expression: return 1;
---
Return(
    ReturnStatement {
        tok_return: Return,
        value: Literal(
            Integer(
                IntegerLiteral(
                    IntLit(
                        1,
                    ),
                ),
            ),
        ),
        tok_semicolon: SemiColon,
    },
)
